# AI-Code-Review-Assitant-langchain

./: .dockerignore  .env.example  .gitignore  .vercelignore  AI_Code_Review_Assistant_Presentation.pptx  Dockerfile  PRESENTATION_OUTLINE.txt  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json  webhook_app.py
.streamlit/: secrets.toml.example
api/: index.py
examples/: demo_diff.patch
scripts/: build_repository_index.py  check_setup.py  demo_review.py  generate_presentation.py  reset_project.py  run_local.ps1
src/: __init__.py
src/code_review_assistant/: __init__.py  config.py  fallback_reviewer.py  github_auth.py  github_client.py  github_commenting.py  github_formatters.py  github_models.py  github_review.py  history_store.py  models.py  parser.py  repository_context.py  reviewer.py  status_checks.py  webhook_security.py
tests/: test_config.py  test_fallback_reviewer.py  test_github_review.py  test_history_store.py  test_parser.py  test_repository_context.py  test_repository_index.py  test_status_checks.py  test_web_demo.py  test_webhook_dedup.py  test_webhook_security.py
